# KVComm

./: .gitignore  README.md  com.py  eval.py  layer_importance.py  main.py  model_attn.py  models.py  models_ac.py  models_cipher.py  pyproject.toml  requirements.txt
dataloader/: __init__.py  base_evaluator.py  countries.py  hotpotqa.py  multifieldqa_en.py  musique.py  narrativeqa.py  qasper.py  tipsheets.py  tmath.py  twowikimqa.py
dataloader/data/: countries.jsonl  tipsheets.jsonl
dataloader/data/TMATH/: README.md
dataloader/data/TMATH/hint_algebra/: hint_0.json  hint_100.json  hint_1000.json  hint_1003.json  hint_1005.json  hint_1006.json  hint_102.json  hint_103.json  hint_105.json  hint_106.json  hint_108.json  hint_112.json  hint_115.json  hint_117.json  hint_118.json  hint_12.json  hint_120.json  hint_121.json  hint_122.json  hint_124.json  hint_127.json  hint_128.json  hint_130.json  hint_133.json  hint_134.json  hint_136.json  hint_14.json  hint_146.json  hint_147.json  hint_150.json  hint_152.json  hint_154.json  hint_157.json  hint_16.json  hint_162.json  hint_163.json  hint_164.json  hint_165.json  hint_167.json  hint_168.json  (+536 more)
dataloader/data/TMATH/hint_counting_and_probability/: hint_1.json  hint_1000.json  hint_1001.json  hint_1002.json  hint_1006.json  hint_1008.json  hint_101.json  hint_1011.json  hint_1012.json  hint_1013.json  hint_1015.json  hint_1017.json  hint_1018.json  hint_1019.json  hint_1020.json  hint_1021.json  hint_1022.json  hint_1023.json  hint_1024.json  hint_1025.json  (+564 more)
utils/: __init__.py  em.py  f1.py  metric_tools.py  utils.py
(+2883 files in other folders)
