[project]
name = "kvcomm-submission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "blobfile>=3.1.0",
    "contractions>=0.1.73",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "huggingface-hub[cli]>=0.36.0",
    "lm-eval==0.4.9",
    "rouge>=1.0.1",
    "spacy>=3.8.11",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "transformers==4.53.3",
    "wandb>=0.23.1",
]
